--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src='./ex-01-classMethods.js'></script>
 
     <!-- ex-02 -->
-    <!-- <script src='./ex-02-keyMirror.js'></script> -->
+    <script src='./ex-02-keyMirror.js'></script>
 
 
 </html>
